# graphify-agent

./: .env  .gitignore  README.md  graphify.db  pyproject.toml  requirements.txt  run.py
agent/: manager.py  prompt_templates.py  test_manager.py  tools_adapter.py
agent/tools/: __init__.py  base.py  formula_tool.py  graphify_tool.py  search_tool.py
graphify/: __main__.py  analyze.py  detect.py  extract.py  ingest.py  serve.py  skill-aider.md
server/: config.py  database.py  main.py  schemas.py
storage/graphs/: graph.html  graph.json  graph原始.html
web/: package-lock.json  package.json  tailwind.config.js
web/public/: index.html
web/src/: App.js  index.css
web/src/components/: ChatInput.js  ConceptSection.js  InteractiveChart.js  InteractiveRenderer.js  MessageList.js  Navbar.js  SceneRenderer.js  Sidebar.js  Stage.js
