[tool.poetry]
name = "graphify-agent"
version = "0.1.0"
description = "Knowledge graph agent for document analysis and graph construction"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
networkx = "^3.0.0"
pandas = "^2.0.0"
tree-sitter = "^0.20.0"
tree-sitter-python = "^0.20.0"
tree-sitter-javascript = "^0.20.0"
tree-sitter-typescript = "^0.20.0"
tree-sitter-go = "^0.20.0"
tree-sitter-rust = "^0.20.0"
tree-sitter-java = "^0.20.0"
tree-sitter-c = "^0.20.0"
tree-sitter-cpp = "^0.20.0"
tree-sitter-ruby = "^0.20.0"
tree-sitter-kotlin = "^0.20.0"
tree-sitter-scala = "^0.20.0"
tree-sitter-php = "^0.20.0"
tree-sitter-swift = "^0.20.0"
tree-sitter-lua = "^0.20.0"
tree-sitter-zig = "^0.20.0"
tree-sitter-elixir = "^0.20.0"
tree-sitter-objc = "^0.20.0"
tree-sitter-julia = "^0.20.0"
tree-sitter-verilog = "^0.20.0"
graspologic = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"